--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,6 +1,8 @@
 - name: install minikube
   hosts: localhost
   connection: local
+  remote_user: ubuntu
+  gather_facts: true
   become: yes
   roles:
     - minikube
