--- a/app-deployment/nodejs-app-deployment.yaml
+++ b/app-deployment/nodejs-app-deployment.yaml
@@ -20,4 +20,4 @@ spec:
         - containerPort: 3000
         envFrom:
         - secretRef:
-            name: app-secret
+            name: mysql-secret
