--- a/app-deployment/nodejs-app-deployment.yaml
+++ b/app-deployment/nodejs-app-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: simple-nodejs-app
-        image: 10.102.20.13:5000/repository/docker-repo/nodejs-app:latest
+        image: localhost:30004/repository/docker-repo/nodejs-app:latest
         ports:
         - containerPort: 3000
         envFrom:
